--- a/src/weather-style.css
+++ b/src/weather-style.css
@@ -7,5 +7,6 @@ body {
   display: block;
   background-color: rgba(255, 255, 255, 0.247);
   margin: 30px;
-  max-width: 1000px;
+  padding: 20px 20px 20px 20px;
+  width: 100%;
 }
