--- a/src/weather-style.css
+++ b/src/weather-style.css
@@ -1,12 +1,66 @@
 body {
-  background-image: linear-gradient(to bottom, #5ee7df 0%, #b490ca 100%);
-  margin: 0 auto;
+	background-image: linear-gradient(to bottom, #5ee7df 0%, #b490ca 100%);
+	margin: 0 auto;
 }
 
 .cardBack {
-  display: block;
-  background-color: rgba(255, 255, 255, 0.247);
-  margin: 30px;
-  padding: 20px 20px 20px 20px;
-  width: 100%;
+	display: block;
+	background-color: rgba(255, 255, 255, 0.247);
+	border-radius: 5px;
+	margin: 0 auto;
+	padding: 20px 20px 20px 20px;
+	max-width: 600px;
+}
+h1 {
+	margin-bottom: 0;
+}
+ul {
+	margin: 0;
+	padding: 0;
+}
+
+li {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	bottom: 25px;
+}
+
+p {
+	display: block;
+	margin: 0 auto;
+	padding: 20px;
+	text-align: center;
+}
+
+.todayBox {
+	background-color: rgba(255, 255, 255, 0.654);
+	border: rgb(10, 10, 94);
+	padding: 15px;
+	border-radius: 0 0 5px 5px;
+}
+.search {
+	background-color: rgba(255, 255, 255, 0.654);
+	border: rgb(10, 10, 94);
+	padding: 10px;
+	border-radius: 5px 5px 0 0;
+}
+.location-button {
+	left: 13px;
+	padding: 2px;
+}
+
+.weather-temperature .fa-cloud-sun {
+	font-size: 36px;
+}
+.weather-temperature strong {
+	font-size: 38px;
+	font-weight: 600;
+	line-height: 1;
+	bottom: 20px;
+}
+.weather-temperature .units {
+	position: relative;
+	font-size: 16px;
+	top: -16px;
 }
