--- a/src/weather-style.css
+++ b/src/weather-style.css
@@ -23,7 +23,6 @@ li {
 	list-style: none;
 	margin: 0;
 	padding: 0;
-	text-transform: capitalize;
 }
 
 p {
@@ -52,9 +51,13 @@ p {
 	margin: 0 auto;
 }
 
+.description li {
+	text-transform: capitalize;
+}
+
 .weather-temperature .fa-cloud-sun {
 	font-size: 36px;
-	padding: 20 20 20 20;
+	padding: 5px;
 }
 .weather-temperature strong {
 	font-size: 38px;
