--- a/src/weather-style.css
+++ b/src/weather-style.css
@@ -17,12 +17,14 @@ h1 {
 ul {
 	margin: 0;
 	padding: 0px;
+	text-transform: initial;
 }
 
 li {
 	list-style: none;
 	margin: 0;
 	padding: 0;
+	text-transform: initial;
 }
 
 p {
@@ -45,13 +47,21 @@ p {
 	padding: 10px;
 	border-radius: 5px 5px 0 0;
 }
+.forecast {
+	background-color: rgba(255, 255, 255, 0.418);
+	border: rgb(10, 10, 94);
+	margin: 10px 10px 10px 10px;
+	padding: 15px;
+	border-radius: 5px 5px 5px 5px;
+}
+
 .location-button {
 	left: 13px;
 	padding: 6px, 3px, 6px, 3px;
 	margin: 0 auto;
 }
 
-.description li {
+.description {
 	text-transform: capitalize;
 }
 
