--- a/src/weather-style.css
+++ b/src/weather-style.css
@@ -11,6 +11,9 @@ body {
 	padding: 20px 20px 20px 20px;
 	max-width: 600px;
 }
+.search {
+	background-color: rgba(255, 255, 255, 0.386);
+}
 h1 {
 	margin-bottom: 0;
 }
