--- a/src/weather-style.css
+++ b/src/weather-style.css
@@ -11,8 +11,13 @@ body {
 	padding: 20px 20px 20px 20px;
 	max-width: 600px;
 }
-.search {
-	background-color: rgba(255, 255, 255, 0.386);
+.form-control {
+	background-color: rgba(255, 255, 255, 0.247);
+	border: none;
+}
+.form-control .search-input {
+	background-color: rgba(255, 255, 255, 0.658);
+	border-color: black;
 }
 h1 {
 	margin-bottom: 0;
@@ -40,7 +45,7 @@ p {
 .todayBox {
 	background-color: rgba(255, 255, 255, 0.386);
 	border: rgb(10, 10, 94);
-	padding: 15px;
+	padding: 25px;
 	border-radius: 0 0 5px 5px;
 }
 .search {
@@ -68,18 +73,20 @@ p {
 }
 
 .weather-temperature strong {
-	font-size: 45px;
+	font-size: 65px;
 	font-weight: 600;
 	line-height: 1;
-	top: 30px;
-	bottom: 20px;
 }
+
 .weather-factors {
-	top: 5px;
+	top: 35px;
 }
 .weather-temperature .units {
 	position: relative;
 	font-size: 16px;
 	top: -16px;
 	text-decoration: none;
+}
+.forecast .forecast-day3 {
+	position: relative;
 }
