--- a/src/weather-style.css
+++ b/src/weather-style.css
@@ -38,7 +38,7 @@ p {
 	margin: 0 auto;
 	padding: 20px;
 	text-align: center;
-	font-size: 10px;
+	font-size: 14px;
 }
 
 #icon {
@@ -49,7 +49,7 @@ p {
 .todayBox {
 	background-color: rgba(255, 255, 255, 0.386);
 	border: rgb(10, 10, 94);
-	padding: 25px;
+	padding: 15px 25px;
 	border-radius: 0 0 5px 5px;
 }
 .search {
@@ -97,7 +97,7 @@ p {
 .units {
 	position: relative;
 	font-size: 16px;
-	top: -16px;
+
 	text-decoration: none;
 }
 
