--- a/src/weather-style.css
+++ b/src/weather-style.css
@@ -71,14 +71,6 @@ p {
 	margin: 0 auto;
 }
 
-#weatherforecast {
-	background-color: rgba(255, 255, 255, 0.386);
-	border: rgb(10, 10, 94);
-	margin: 10px 10px 10px 10px;
-	padding: 15px;
-	border-radius: 5px 5px 5px 5px;
-}
-
 #description {
 	text-transform: capitalize;
 }
@@ -110,10 +102,13 @@ p {
 	text-decoration: none;
 }
 
-.weather-forecast {
-	position: absolute;
-	top: 40px;
-	left: 20px;
+#weatherforecast {
+	background-color: rgba(255, 255, 255, 0.386);
+	border: rgb(10, 10, 94);
+	margin: 10px 10px 10px 10px;
+	padding: 15px;
+	border-radius: 5px 5px 5px 5px;
+	position: relative;
 }
 
 #iconFuture {
@@ -121,7 +116,12 @@ p {
 	position: relative;
 }
 #weatherforecast li {
+	display: block;
 	line-height: 1;
 	top: -10px;
 	text-align: center;
+}
+
+#forcastbox {
+	position: relative;
 }
